hphp/hack/test/typecheck/new_inference/eager_solve/array_append_bad.php.exp
File "array_append_bad.php", line 41, characters 3-21:
an object of type Map<_, _> does not allow array append (Typing[4006])
  File "array_append_bad.php", line 27, characters 3-14:
  Definition is here
File "array_append_bad.php", line 42, characters 3-21:
an object of type Map<int, num> does not allow array append (Typing[4006])
  File "array_append_bad.php", line 27, characters 3-14:
  Definition is here
File "array_append_bad.php", line 32, characters 16-20:
Invalid argument (Typing[4110])
  File "array_append_bad.php", line 11, characters 23-28:
  Expected `string`
  File "array_append_bad.php", line 22, characters 10-12:
  But got `int`
File "array_append_bad.php", line 35, characters 16-20:
Invalid argument (Typing[4110])
  File "array_append_bad.php", line 11, characters 23-28:
  Expected `string`
  File "array_append_bad.php", line 23, characters 7-9:
  But got `int`
File "array_append_bad.php", line 37, characters 3-18:
Invalid assignment (Typing[4110])
  File "array_append_bad.php", line 24, characters 10-12:
  Expected `num`
  File "array_append_bad.php", line 37, characters 15-18:
  But got `bool`
File "array_append_bad.php", line 39, characters 3-15:
Set values must be arraykeys (Typing[4324])
  File "array_append_bad.php", line 26, characters 3-10:
  This container is an object of type Set<int>
  File "array_append_bad.php", line 39, characters 12-15:
  A bool is not an arraykey
